[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ilya Manannikov <himonhm@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"
django-filter = "^23.2"
pillow = "^10.0.0"


[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.10.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
